[workspace]
resolver = "2"
members = [
    "glutin",
    "glutin-winit",
    "glutin_examples",
    "glutin_egl_sys",
    "glutin_glx_sys",
    "glutin_wgl_sys",
    "glutin_gles2_sys",
]

[patch.crates-io]
# https://github.com/brendanzab/gl-rs/pull/546
gl_generator = { git = "https://github.com/MarijnS95/gl-rs", rev = "aee4d91" }
